# Front-End

## Fait :
- Layout : Header, Main, Footer
- Navigation avec React router entre les différentes pages de recherche
- Page de recherche :
  - Possibilité de lancer une recherche (données mockées) sur la page Imprimées.
  - Possibilité de naviguer les résultats.
  - Enregistrement de tous les paramètres de recherche dans l'URL (pour le copié/collé).
- Affichage de vrai images dans le composant ImageViewer (mockées).
- Styliser la page d'invitation à la première recherche
- Styliser le page de chargement des données
- Composant de recherche disponible (avec données mockées) pour Imprimés, Factums, Fond Documentaire, Fond Johannique


## À faire :
- Adapter le SearchComponent pour être utiliser pour les pages spéciales 'Manuscrits' et 'Index du Pays-Lorrain'
- Styliser le Footer
- Ajouter une conversion code technique de métadonnées vers texte affiché.
- L'affichage ou non d'images est un paramètre du composant SearchComponent

# Back-End :

## Fait :

## À faire :
- Créer le service.
- Connecter la base de données.
- Créer le script csv to sql.
- Échanger des messages avec le Front-End.
- Implémenter la recherche.
- Faire fonctionner une route.
- Faire fonctionner toutes les routes.
- Sécurité et authentification front/back (si pas en local).