@@ -11,9 +11,12 @@
 - Styliser la page d'invitation à la première recherche
 - Styliser le page de chargement des données
 - Composant de recherche disponible (avec données mockées) pour Imprimés, Factums, Fond Documentaire, Fond Johannique
+- Le lien actif est maintenant visible
 
 
 ## À faire :
+- Sur la recherche fond documentaire: MetadataName trop long
+- Quand je change de résultat, je dois revenir à l'image n°1 du résultat suivant.
 - Adapter le SearchComponent pour être utiliser pour les pages spéciales 'Manuscrits' et 'Index du Pays-Lorrain'
 - Styliser le Footer
 - Ajouter une conversion code technique de métadonnées vers texte affiché.
